Version 5.0.6
- Made help text for GUI wrap

Version 5.0.4
- Added tooltips for open file tabs
- Use $HOME/.flexprop.config for the config file location on Windows too

Version 5.0.3
- Added Changelogs to documentation
- Updated loadp2 to have -DTR and -RTS options

Version 5.0.1
- Disabled P2a buttons
- Enabled ANSI console mode for P1 loader in Windows
- On Linux and Mac, use $HOME for config file location

Version 5.0.0
- Renamed "fastspin" to "flexspin"
- Added new simpletools samples from Roy Eltham
- Added option for using fixed point to GUI
- Removed upython sample

Version 4.5.0
- Renamed to FlexProp
- Added C time sample

Version 4.4.0
- Changed help window to be separate rather than a tab
- Made listing window editable
- Removed "-fs 14" from terminal-emulator command line

Version 4.3.1
- Updated fastspin to include bug fixes

Version 4.3.0
- Fixed "Terminal only" special command
- Added debug enable/disable to menu

Version 4.2.6
- No GUI changes

Version 4.2.5
- Added menu options for changing warning level
- Fixed clicking on links (filenames) containing colons in the editor
- Fixed some issues with auto-indent and made the indent level match
  the selected tab stops

Version 4.2.4
- No GUI changes

Version 4.2.3
- Fixed autoindent behavior when } is at start of line

Version 4.2.2
- Added an automatic indentation option.
- Improved syntax highlighting of numbers.
- Made listing window use preferred font.

Version 4.2.0
- Added general compiler documentation.

Version 4.1.11
- Fixed a problem with P1 PropLoader startup timing

Version 4.1.10
- Fixed "Run binary on device" when no tabs open
- Added option to rescan ports, and to look for WiFi devices for P1

Version 4.1.9
- Added syntax coloring for BASIC
- Turned on syntax coloring by default

Version 4.1.8
- Preliminary (and not very satisfying) implementation of syntax coloring.

Version 4.1.7
- Fixed a problem with finding include files in error messages

Version 4.1.6